<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_view"
        android:orderInCategory="100"
        android:title="@string/action_view"
        app:showAsAction="never" />
 <!--  <item
       android:id="@+id/action_edit"
       android:orderInCategory="100"
       android:title="@string/action_edit"
       app:showAsAction="never" />-->
   <item
       android:id="@+id/action_sale"
       android:orderInCategory="100"
       android:title="@string/action_sale"
       app:showAsAction="never" />
   <item
       android:id="@+id/action_cancle"
       android:orderInCategory="100"
       android:title="@string/action_cancle"
       app:showAsAction="never" />
   <item
       android:id="@+id/action_delete"
       android:orderInCategory="100"
       android:title="@string/action_del"
       app:showAsAction="never" />
</menu>