<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorMainDark"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:padding="@dimen/_2sdp"
                android:text="@string/hint_today"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="@dimen/_2sdp">

                <TextView
                    android:id="@+id/dash_todateId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center"
                    android:text="12/2/2021"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
                <!-- <View
                     android:layout_width="@dimen/_1sdp"
                     android:layout_height="match_parent"
                     android:background="@color/white" />
                 <TextView
                     android:layout_weight=".5"
                     android:id="@+id/dash_todayId"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/roboto_light"
                     android:gravity="center"
                     android:text="Sun Day"
                     android:textColor="@color/white"
                     android:textSize="16sp"
                     />-->
                <TextView
                    android:id="@+id/dash_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/llforadmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/tracklin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:layout_weight="1"
                android:background="@color/colorMain4"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:padding="@dimen/_2sdp"
                android:text="@string/hint_ordertrack"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView

                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@color/colorRed_low"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:padding="@dimen/_2sdp"
                android:text="Staff Report"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/log"
        android:layout_width="211dp"
        android:layout_height="83dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:scaleType="fitXY"
        android:src="@drawable/sslogo"
        app:layout_constraintBottom_toTopOf="@+id/ll2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top">

    </ImageView>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:background="@color/colorMain"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/ll3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/_10sdp"
      >


        <TextView
            android:id="@+id/ado"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_neworder"
            android:drawableTint="@color/white"
            android:elevation="@dimen/_5sdp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/hint_addorder"
            android:textAllCaps="false"

            android:textColor="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="@dimen/_4sdp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <TextView
            android:id="@+id/ol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:backgroundTint="@color/colorMain"
            android:drawableTop="@drawable/ic_olist"
            android:drawableTint="@color/white"
            android:elevation="@dimen/_5sdp"
            android:fontFamily="@font/roboto_medium"


            android:gravity="center"
            android:text="@string/hint_orderlist"
            android:textAllCaps="false"

            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@color/colorRed_low"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/ll4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       >
       <!-- app:layout_constraintTop_toBottomOf="@+id/ll2"-->
        <TextView
            android:id="@+id/adc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_person_add"
            android:drawableTint="@color/white"
            android:elevation="@dimen/_5sdp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/hint_adcust"
            android:textAllCaps="false"

            android:textColor="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="@dimen/_4sdp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <TextView
            android:id="@+id/cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:backgroundTint="@color/colorMain3"
            android:drawableTop="@drawable/ic_users"
            android:drawableTint="@color/white"
            android:elevation="@dimen/_5sdp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/hint_cuslist"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"

            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@color/colorMain4"
        android:elevation="@dimen/_5sdp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/ll5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       >
       <!-- app:layout_constraintTop_toBottomOf="@+id/ll3"-->
        <TextView
            android:id="@+id/to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:backgroundTint="@color/colorMain"
            android:drawableTop="@drawable/ic_track"
            android:drawableTint="@color/white"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/hint_ordertrack"


            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="@dimen/_4sdp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <TextView
            android:id="@+id/ps"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:backgroundTint="@color/colorMain4"
            android:drawableTop="@drawable/ic_olist"
            android:drawableTint="@color/white"
            android:elevation="@dimen/_5sdp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/hint_product"

            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@color/colorMain"
        android:elevation="@dimen/_5sdp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
       <!-- app:layout_constraintTop_toBottomOf="@+id/ll4"-->

        <TextView
            android:id="@+id/stufforderrep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:backgroundTint="@color/colorMain"
            android:drawableTop="@drawable/ic_olist"
            android:drawableTint="@color/white"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="Staff Report"


            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="@dimen/_4sdp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <TextView
            android:id="@+id/dailyreport"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:backgroundTint="@color/colorMain4"
            android:drawableTop="@drawable/ic_olist"
            android:drawableTint="@color/white"
            android:elevation="@dimen/_5sdp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="Daily Report"

            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>